--- a/app/i18n/locales/de/home.json
+++ b/app/i18n/locales/de/home.json
@@ -2,7 +2,9 @@
   "navbar": {
   "menu-item1": "Über",
     "menu-item2": "Kenntnisse",
-    "menu-item3": "Resumé"
+    "menu-item3": "Resumé",
+    "cat-tooltip1": "Digitale Wolle für digitale Katzen.",
+    "cat-tooltip2": "ESC um abzubrechen."
   },
   "imprint": {
     "part1": "Dies ist eine private und nicht-kommerzielle Portfolioseite.",
