--- a/app/i18n/locales/ch/home.json
+++ b/app/i18n/locales/ch/home.json
@@ -4,7 +4,7 @@
     "menu-item2": "Kenntnisse",
     "menu-item3": "Resumé",
     "cat-tooltip1": "Digitale Wolle für digitale Chatz.",
-    "cat-tooltip2": "ESC um abzubreche."
+    "cat-tooltip2": "ESC zum abbrechen."
   },
   "imprint": {
     "part1": "Dies ist eine private und nicht-kommerzielle Portfolioseite.",
@@ -22,7 +22,7 @@
     "top-text3": "Aktuell befind ich mi im letschte Joor vo minere Usbildig zum ",
     "top-text4": "Ahwändigsentwickler. In minere Usbildig hani villi verschiedeni ",
     "top-text5": "Ihblick in verschideni Beriich dörfe becho, bi aber am ",
-    "top-text6": "meischte vo dr SFrontend-Entwicklich begeischteret gse."
+    "top-text6": "meischte vo dr Frontend-Entwicklig begeischteret gse."
   },
   "skills": {
     "technologies": "Technologien",
