--- a/app/i18n/locales/de/home.json
+++ b/app/i18n/locales/de/home.json
@@ -4,7 +4,7 @@
     "menu-item2": "Kenntnisse",
     "menu-item3": "Resumé",
     "cat-tooltip1": "Digitale Wolle für digitale Katzen.",
-    "cat-tooltip2": "ESC um abzubrechen."
+    "cat-tooltip2":  "ESC zum abbrechen."
   },
   "imprint": {
     "part1": "Dies ist eine private und nicht-kommerzielle Portfolioseite.",
@@ -22,7 +22,7 @@
     "top-text3": "und ich befinde mich derzeit im letzten Jahr meiner Ausbildung",
     "top-text4": "zum Anwendungsentwickler. Während meiner Ausbildung hatte ",
     "top-text5": "ich viele verschiedene Einblicke in verschiedene Bereiche, aber  ",
-    "top-text6": "ich war am meisten angetan von Frontend-Entwicklung"
+    "top-text6": "ich war am meisten von der Frontend-Entwicklung angetan."
   },
   "skills": {
     "technologies": "Technologien",
