--- a/app/i18n/locales/en/home.json
+++ b/app/i18n/locales/en/home.json
@@ -2,6 +2,7 @@
   "navbar": {
     "menu-item1": "About",
     "menu-item2": "Skills",
+    "menu-item3": "Resumé",
     "cat-tooltip1": "Digital wool for digital cats.",
     "cat-tooltip2": "ESC to exit."
   },
