--- a/app/i18n/locales/en/home.json
+++ b/app/i18n/locales/en/home.json
@@ -20,7 +20,7 @@
     "top-text1": "Hi, i am",
     "top-text2": "Aspiring Frontend Developer",
     "top-text3": "and I am currently in my final year of training to become an",
-    "top-text4": "application developer. During my apprenticeship, I had many",
+    "top-text4": "application developer. During my apprenticeship I had many",
     "top-text5": "different insights into different areas, but I was most ",
     "top-text6": "taken with frontend development."
 },
