--- a/app/i18n/locales/ch/home.json
+++ b/app/i18n/locales/ch/home.json
@@ -2,7 +2,7 @@
   "navbar": {
     "menu-item1": "Über",
     "menu-item2": "Kenntnisse",
-    "menu-item3": "Resumé",
+    "menu-item3": "Résumé",
     "cat-tooltip1": "Digitale Wolle für digitale Chatz.",
     "cat-tooltip2": "ESC zum abbrechen."
   },
