--- a/app/i18n/locales/de/home.json
+++ b/app/i18n/locales/de/home.json
@@ -2,7 +2,7 @@
   "navbar": {
   "menu-item1": "Über",
     "menu-item2": "Kenntnisse",
-    "menu-item3": "Resumé",
+    "menu-item3": "Resümee",
     "cat-tooltip1": "Digitale Wolle für digitale Katzen.",
     "cat-tooltip2":  "ESC zum abbrechen."
   },
