--- a/app/i18n/locales/ch/home.json
+++ b/app/i18n/locales/ch/home.json
@@ -13,7 +13,7 @@
     "part4": "frei zur Verwendung im Rahmen der",
     "part5": "Von LinkedIn automatisch generierter Lebenslauf.",
     "part6": "Alle Icons sind Teil der react-icons-Icon-Library.",
-    "Teil7": "Benutzerdefinierte Cursor-Symbole aus cursor.cc",
+    "part7": "Benutzerdefinierte Cursor-Symbole aus cursor.cc",
     "part8": "frei zur Verwendung unter der Creative Commons Lizenz ohne Attribute."
   },
   "about": {
@@ -39,6 +39,10 @@
   },
   "footer": {
     "text1":"Geschrieben in Webstorm. Mit Next.js and Tailwind CSS gebaut, deployed durch Netlify."
+  },
+  "resumeHeader": {
+    "additive": "Usbildig & Berufserfahrig",
+    "title": "Résumé"
   }
 
 
