loadingScreen Lang & Animation

--- a/app/i18n/locales/ch/home.json
+++ b/app/i18n/locales/ch/home.json
@@ -43,7 +43,12 @@
   "resumeHeader": {
     "additive": "Usbildig & Berufserfahrig",
     "title": "Résumé"
+  },
+  "loadingScreen": {
+    "word1": "WILLKOMMEN",
+    "word2": "AUF",
+    "word3": "MEINEM",
+    "word4": "PORTFOLIO"
   }
-
 
 }
