--- a/app/i18n/locales/de/home.json
+++ b/app/i18n/locales/de/home.json
@@ -43,7 +43,13 @@
   "resumeHeader": {
   "additive": "Ausbildung & Berufserfahrung",
   "title": "Lebenslauf"
-}
+},
+  "loadingScreen": {
+    "word1": "WILLKOMMEN",
+    "word2": "AUF",
+    "word3": "MEINEM",
+    "word4": "PORTFOLIO"
+  }
 
 
 }
