--- a/app/i18n/locales/en/home.json
+++ b/app/i18n/locales/en/home.json
@@ -42,6 +42,12 @@
   "resumeHeader": {
     "additive": "Education & Work Experience",
     "title": "Resume"
-  }
+  },
+  "loadingScreen": {
+  "word1": "WELCOME",
+  "word2": "TO",
+  "word3": "MY",
+  "word4": "PORTFOLIO"
+}
 
 }
