--- a/app/i18n/locales/de/home.json
+++ b/app/i18n/locales/de/home.json
@@ -38,7 +38,7 @@
     "text4": "Fitness und Krafttraining sind mir in meinem Leben ebenso wichtig."
   },
   "footer": {
-    "text1":"Geschrieben in Webstorm. Mit Next.js and Tailwind CSS gebaut, deployed durch Netlify."
+    "text1":"Geschrieben in Webstorm. Mit Next.js, Tailwind und Framer Motion erstellt, deployed durch Netlify."
   },
   "resumeHeader": {
   "additive": "Ausbildung & Berufserfahrung",
