--- a/app/i18n/locales/en/home.json
+++ b/app/i18n/locales/en/home.json
@@ -37,8 +37,14 @@
     "text2": " I listen to a lot of dark and atmospheric music, from extreme metal to dark wave to neofolk and post punk. I also like various rock music and electronic music.",
     "text3": "I am still interested in philosophy (Cioran, Nietzsche, Camus, Schopenhauer, Hobbes, Sartre, Zizek) after my studies and a little bit (more and more) in visual arts (Grimshaw, Kittelsen, Corot, Bierstadt, Doré, Beksinski, Friedrich, Lessing, Giger) as well.",
     "text4": "Fitness and weight training are also essential to my life."
-  },  "footer": {
-  "text1":"Coded in Webstorm. Built with Next.js, Tailwind and Framer Motion, deployed with Netlify."
+  },
+  "footer": {
+  "text1":"Coded in Webstorm.",
+    "text2": "Deployed with Netlify.",
+    "text3": "Built with:",
+    "word1": "Next.js",
+    "word2": "Tailwind CSS",
+    "word3": "Framer Motion"
 },
   "resumeHeader": {
     "additive": "Education & Work Experience",
