--- a/app/i18n/locales/ch/home.json
+++ b/app/i18n/locales/ch/home.json
@@ -4,7 +4,7 @@
     "menu-item2": "Kenntnisse",
     "menu-item3": "Résumé",
     "cat-tooltip1": "Digitale Wolle für digitale Chatz.",
-    "cat-tooltip2": "ESC zum abbrechen."
+    "cat-tooltip2": "zum abbrechen."
   },
   "imprint": {
     "part1": "Dies ist eine private und nicht-kommerzielle Portfolioseite.",
