--- a/app/i18n/locales/en/home.json
+++ b/app/i18n/locales/en/home.json
@@ -5,7 +5,7 @@
     "menu-item2": "Skills",
     "menu-item3": "Resume",
     "cat-tooltip1": "Digital wool for digital cats.",
-    "cat-tooltip2": "ESC to exit."
+    "cat-tooltip2": "to exit."
   },
   "imprint": {
     "part1": "This is an private & non-commercial portfolio site.",
