--- a/app/i18n/locales/ch/home.json
+++ b/app/i18n/locales/ch/home.json
@@ -18,7 +18,9 @@
   },
   "about": {
     "top-text1": "Grüezi, ich bi dr",
-    "top-text2": "Frontendentwickler in Usbildig",
+    "top-text2.1": "Angehender Frontendentwickler ",
+    "top-text2.2": "Angehender Web-Entwickler",
+    "top-text2.3": "Angehender UI/UX Designer",
     "top-text3": "Aktuell befind ich mi im letschte Joor vo minere Usbildig zum ",
     "top-text4": "Ahwändigsentwickler. In minere Usbildig hani villi verschiedeni ",
     "top-text5": "Ihblick in verschideni Beriich dörfe becho, bi aber am ",
