--- a/app/i18n/locales/de/home.json
+++ b/app/i18n/locales/de/home.json
@@ -18,7 +18,9 @@
   },
   "about": {
     "top-text1": "Hallo, ich bin",
-    "top-text2": "Angehender Frontendentwickler",
+    "top-text2.1": "Angehender Frontendentwickler",
+    "top-text2.2": "Angehender Web-Entwickler",
+    "top-text2.3": "Angehender UI/UX Designer",
     "top-text3": "und ich befinde mich derzeit im letzten Jahr meiner Ausbildung",
     "top-text4": "zum Anwendungsentwickler. Während meiner Ausbildung hatte ",
     "top-text5": "ich viele verschiedene Einblicke in verschiedene Bereiche, aber  ",
