--- a/app/i18n/locales/en/home.json
+++ b/app/i18n/locales/en/home.json
@@ -19,7 +19,9 @@
   },
   "about": {
     "top-text1": "Hi, i am",
-    "top-text2": "Aspiring Frontend Developer",
+    "top-text2.1": "Aspiring Frontend Developer",
+    "top-text2.2": "Aspiring Web Developer",
+    "top-text2.3": "Aspiring UI/UX Designer",
     "top-text3": "and I am currently in my final year of training to become an",
     "top-text4": "application developer. During my apprenticeship I had many",
     "top-text5": "different insights into different areas, but I was most ",
