--- a/app/i18n/locales/ch/home.json
+++ b/app/i18n/locales/ch/home.json
@@ -3,7 +3,7 @@
     "menu-item1": "Über",
     "menu-item2": "Kenntnisse",
     "menu-item3": "Résumé",
-    "cat-tooltip1": "Digitale Wolle für digitale Chatz.",
+    "cat-tooltip1": "Digitali Wulle für digitali Chatz.",
     "cat-tooltip2": "zum abbrechen."
   },
   "imprint": {
