--- a/app/i18n/locales/de/home.json
+++ b/app/i18n/locales/de/home.json
@@ -21,10 +21,11 @@
     "top-text2.1": "Angehender Frontendentwickler",
     "top-text2.2": "Angehender Web-Entwickler",
     "top-text2.3": "Angehender UI/UX Designer",
-    "top-text3": "und ich befinde mich derzeit im letzten Jahr meiner Ausbildung",
-    "top-text4": "zum Anwendungsentwickler. Während meiner Ausbildung hatte ",
+    "top-text3": "und ich habe meine Ausbildung zum Anwendungsentwickler ",
+    "top-text4": "im Januar 2024 abgeschlossen. Während meiner Ausbildung hatte ",
     "top-text5": "ich viele verschiedene Einblicke in verschiedene Bereiche, aber  ",
-    "top-text6": "ich war am meisten von der Frontend-Entwicklung angetan."
+    "top-text6": "ich war am meisten von der Frontend-Entwicklung angetan.",
+    "top-text7": "Seit 02/24 lebe ich in Münchenstein und arbeite in Basel."
   },
   "skills": {
     "technologies": "Technologien",
