--- a/app/i18n/locales/en/home.json
+++ b/app/i18n/locales/en/home.json
@@ -22,10 +22,11 @@
     "top-text2.1": "Aspiring Frontend Developer",
     "top-text2.2": "Aspiring Web Developer",
     "top-text2.3": "Aspiring UI/UX Designer",
-    "top-text3": "and I am currently in my final year of training to become an",
-    "top-text4": "application developer. During my apprenticeship I had many",
-    "top-text5": "different insights into different areas, but I was most ",
-    "top-text6": "taken with frontend development."
+    "top-text3": "and I completed my training as an application developer  ",
+    "top-text4": "in January 2024. During my apprenticeship I had many",
+    "top-text5": "different insights into different areas, but  ",
+    "top-text6": "I was most taken with frontend development.",
+    "top-text7": "Since 02/24 I live in Münchenstein and work in Basel."
 },
   "skills": {
     "technologies": "Technologies",
