--- a/app/i18n/locales/ch/home.json
+++ b/app/i18n/locales/ch/home.json
@@ -21,10 +21,11 @@
     "top-text2.1": "Angehender Frontendentwickler ",
     "top-text2.2": "Angehender Web-Entwickler",
     "top-text2.3": "Angehender UI/UX Designer",
-    "top-text3": "Aktuell befind ich mi im letschte Joor vo minere Usbildig zum ",
-    "top-text4": "Ahwändigsentwickler. In minere Usbildig hani villi verschiedeni ",
+    "top-text3": "und ich habe meine Ausbildung zum Anwendungsentwickler ",
+    "top-text4": "im Januar 2024 abgeschlossen. In minere Usbildig hani villi verschiedeni  ",
     "top-text5": "Ihblick in verschideni Beriich dörfe becho, bi aber am ",
-    "top-text6": "meischte vo dr Frontend-Entwicklig begeischteret gse."
+    "top-text6": "meischte vo dr Frontend-Entwicklig begeischteret gse.",
+    "top-text7": "Seit 02/24 lebe ich in Münchenstein und arbeite in Basel."
   },
   "skills": {
     "technologies": "Technologien",
