--- a/app/i18n/locales/ch/home.json
+++ b/app/i18n/locales/ch/home.json
@@ -21,10 +21,10 @@
     "top-text2.1": "Angehender Frontendentwickler ",
     "top-text2.2": "Angehender Web-Entwickler",
     "top-text2.3": "Angehender UI/UX Designer",
-    "top-text3": "und ich ha mini Usbildig zum Ahwändigsentwickler ",
-    "top-text4": "im Januar 2024 abgschlosse. In minere Usbildig hani villi verschiedeni  ",
-    "top-text5": "Ihblick in verschideni Beriich dörfe becho, bi aber am ",
-    "top-text6": "meischte vo dr Frontend-Entwicklig begeischteret gse.",
+    "top-text3": "und ich ha mini Usbildig zum Ahwändigsentwickler im ",
+    "top-text4": " Januar 2024 abgschlosse. In minere Usbildig hani villi ",
+    "top-text5": "verschiedeni Ihblick in verschideni Beriich dörfe becho, ",
+    "top-text6": "bi aber am meischte vo dr Frontend-Entwicklig begeischteret gse.",
     "top-text7": "Sit 02/2024 läb ich in Münchestei und arbeit z Basel."
   },
   "skills": {
