--- a/app/i18n/locales/de/home.json
+++ b/app/i18n/locales/de/home.json
@@ -18,9 +18,9 @@
   },
   "about": {
     "top-text1": "Hallo, ich bin",
-    "top-text2.1": "Angehender Frontendentwickler",
-    "top-text2.2": "Angehender Web-Entwickler",
-    "top-text2.3": "Angehender UI/UX Designer",
+    "top-text2.1": "Frontendentwicklung",
+    "top-text2.2": "Web-Entwicklung",
+    "top-text2.3": "UI/UX-Design",
     "top-text3": "und ich habe meine Ausbildung zum Anwendungsentwickler ",
     "top-text4": "im Januar 2024 abgeschlossen. Während meiner Ausbildung hatte ",
     "top-text5": "ich viele verschiedene Einblicke in verschiedene Bereiche, aber  ",
