--- a/app/i18n/locales/ch/home.json
+++ b/app/i18n/locales/ch/home.json
@@ -18,9 +18,9 @@
   },
   "about": {
     "top-text1": "Grüezi, ich bi dr",
-    "top-text2.1": "Angehender Frontendentwickler ",
-    "top-text2.2": "Angehender Web-Entwickler",
-    "top-text2.3": "Angehender UI/UX Designer",
+    "top-text2.1": "Frontendentwicklig",
+    "top-text2.2": "Web-Entwicklig",
+    "top-text2.3": "UI/UX-Design",
     "top-text3": "und ich ha mini Usbildig zum Ahwändigsentwickler im ",
     "top-text4": " Januar 2024 abgschlosse. In minere Usbildig hani villi ",
     "top-text5": "verschiedeni Ihblick in verschideni Beriich dörfe becho, ",
