--- a/app/i18n/locales/en/home.json
+++ b/app/i18n/locales/en/home.json
@@ -19,9 +19,9 @@
   },
   "about": {
     "top-text1": "Hi, i am",
-    "top-text2.1": "Aspiring Frontend Developer",
-    "top-text2.2": "Aspiring Web Developer",
-    "top-text2.3": "Aspiring UI/UX Designer",
+    "top-text2.1": "Frontend Development",
+    "top-text2.2": "Web Development",
+    "top-text2.3": "UI/UX Design",
     "top-text3": "and I completed my training as an application developer  ",
     "top-text4": "in January 2024. During my apprenticeship I had many",
     "top-text5": "different insights into different areas, but  ",
